roles/addons/files/service-ingress.yml
# service-ingress.yml

---
# Load-balancer to listen on an arbitrary IP and directs traffic towards one of the listening ingress controllers.
# https://microk8s.io/docs/addon-metallb
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80s
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
